# Borderlands-4.NcsParser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: common.h  main.cpp  ncs_parser.cpp  ncs_parser.h
src/blake3/: blake3_stub.c
src/ncs/: ncs_bit_reader.h  ncs_bit_writer.h  ncs_crc32.cpp  ncs_crc32.h  ncs_decomp.cpp  ncs_decomp.h  ncs_decomp_writer.cpp  ncs_decomp_writer.h  ncs_file.cpp  ncs_file.h  ncs_table_data_decoder.cpp  ncs_table_data_decoder.h  ncs_table_data_encoder.cpp  ncs_table_data_encoder.h  ncs_type_code_table.cpp  ncs_type_code_table.h
src/oodle/: oodle_api.cpp  oodle_api.h
src/utils/: fs_utils.cpp  fs_utils.h  log.cpp  log.h
